Fix alignment

--- a/style.css
+++ b/style.css
@@ -47,8 +47,9 @@ a {
 
 /* section 2 */
 .section-2 {
-    padding-top: 46vh;
+    padding-top: 47vh;
     width: 70%;
+    text-align: center;
 }
 
 .section-2 h2 {
